<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        <TableRow
            android:layout_weight="1"
            android:paddingBottom="16dp" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="20dp"
                android:paddingBottom="8dp"
                android:text="@string/task"/>

            <TextView
                android:id="@+id/TodoName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textSize="30dp"
                android:text="Task" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:paddingBottom="16dp" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="20dp"
                android:paddingBottom="8dp"
                android:text="@string/due"/>

            <TextView
                android:id="@+id/DueTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textSize="20dp"
                android:paddingBottom="16dp"
                tools:text = "Due Time" />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingBottom="8dp"
                android:text="@string/description"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"
        android:paddingLeft="16dp"
        android:text="Description" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/edit" />

</LinearLayout>

